Kubernetes - Azure/templates/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gb-backend-deployment
  labels:
    app: gb-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gb-backend
  template:
    metadata:
      labels:
        app: gb-backend
    spec:
      containers:
      - name: gb-backend
        image: chrisstefaniak/gb-backend:latest
        imagePullPolicy: Always 
        ports:
        - containerPort: 8080
