Kubernetes - Azure/templates/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
spec:
  selector:
    app: gb-backend
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
