Kubernetes - Azure/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gb-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
        - pathType: Prefix
          path: /horse
          backend:
            service:
              name: frontend-service
              port:
                number: 3000
        - pathType: Prefix
          path: /api
          backend:
            service:
              name: backend-service
              port:
                number: 8080
